force-app/main/default/objects/loan__Loan_Block_Code__c/loan__Loan_Block_Code__c.object-meta.xml
<CustomObject>
    <description>Contingency Status Code&apos;s are tagging  loan accounts indicating specific situations such as bankruptcy, fraud etc.</description>
    <label>Contingency Status Code</label>
    <nameField>
        <displayFormat>CSC-{0000000}</displayFormat>
        <label>Contingency Status Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contingency Status Codes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>