force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Block_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Block_Code__c</fullName>
    <label>Contingency Status Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy  (B)</fullName>
            </value>
            <value>
                <fullName>Deceased  (D)</fullName>
            </value>
            <value>
                <fullName>Fraudulent (F)</fullName>
            </value>
            <value>
                <fullName>Duplicate (K)</fullName>
            </value>
            <value>
                <fullName>No Communication (X)</fullName>
            </value>
            <value>
                <fullName>SCRA (S)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>