force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Block_Code_Expiry_Processed__c.field-meta.xml
<CustomField>
    <fullName>loan__Block_Code_Expiry_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Block Code Expiry Processed?</description>
    <label>Contingency Status Code Expiry Processed</label>
    <type>Checkbox</type>
</CustomField>