force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Block_Code_Revoked__c.field-meta.xml
<CustomField>
    <fullName>loan__Block_Code_Revoked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is Block Code Revoked?</description>
    <label>Contingency Status Code Revoked</label>
    <type>Checkbox</type>
</CustomField>