force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Block_Code_Revoked_On__c.field-meta.xml
<CustomField>
    <fullName>loan__Block_Code_Revoked_On__c</fullName>
    <label>Contingency Status Code Revoked On</label>
    <type>Date</type>
</CustomField>