force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Contingency_Status_Code_Setup__c.field-meta.xml
<CustomField>
    <fullName>loan__Contingency_Status_Code_Setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Loan Account for which this Contingency Status code is defined</description>
    <inlineHelpText>Id of other transaction made by Contingency Status Code</inlineHelpText>
    <label>Contingency Status Code Setup</label>
    <referenceTo>clcommon__Contingency_Status_Code__c</referenceTo>
    <relationshipLabel>Contingency Status Codes</relationshipLabel>
    <relationshipName>Loan_Block_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>