force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Invalidate_Contract__c.field-meta.xml
<CustomField>
    <fullName>loan__Invalidate_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Invalidate Contract</description>
    <label>Invalidate Contract</label>
    <type>Checkbox</type>
</CustomField>