force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Loan_Account__c.field-meta.xml
<CustomField>
    <fullName>loan__Loan_Account__c</fullName>
    <description>Loan Account for which this Contingency Status code is defined</description>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Contingency Status Codes</relationshipLabel>
    <relationshipName>Loan_Block_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>