force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Minutes_To_Expire_Code__c.field-meta.xml
<CustomField>
    <fullName>loan__Minutes_To_Expire_Code__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Minutes To Expire Code</description>
    <inlineHelpText>Minutes to expire</inlineHelpText>
    <label>Minutes To Expire Code</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>