force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Other_Transaction__c.field-meta.xml
<CustomField>
    <fullName>loan__Other_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This stores the ID of other transaction made by Loan Block Code.</description>
    <inlineHelpText>Id of other transaction made by Loan Block Code</inlineHelpText>
    <label>Other Loan Transaction</label>
    <referenceTo>loan__Other_Transaction__c</referenceTo>
    <relationshipLabel>Contingency Status Codes</relationshipLabel>
    <relationshipName>Loan_Block_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>