force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Stop_Accrual_Entries__c.field-meta.xml
<CustomField>
    <fullName>loan__Stop_Accrual_Entries__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applicable with picklist value &apos;Stop Accrual Entry&apos;</description>
    <inlineHelpText>Applicable with picklist value &apos;Stop Accrual Entry&apos;</inlineHelpText>
    <label>Stop Accrual Entries</label>
    <type>Checkbox</type>
</CustomField>