force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Stop_Accruals__c.field-meta.xml
<CustomField>
    <fullName>loan__Stop_Accruals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stop Accruals</description>
    <label>Stop Accruals</label>
    <type>Checkbox</type>
</CustomField>