force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Suspend_ACH__c.field-meta.xml
<CustomField>
    <fullName>loan__Suspend_ACH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspend ACH</description>
    <label>Suspend ACH</label>
    <type>Checkbox</type>
</CustomField>