force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Suspend_Charges__c.field-meta.xml
<CustomField>
    <fullName>loan__Suspend_Charges__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspend Charges</description>
    <label>Suspend Charges</label>
    <type>Checkbox</type>
</CustomField>