force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Suspend_Communication__c.field-meta.xml
<CustomField>
    <fullName>loan__Suspend_Communication__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspend Communication</description>
    <label>Suspend Communication</label>
    <type>Checkbox</type>
</CustomField>