force-app/main/default/objects/loan__Loan_Block_Code__c/fields/loan__Suspend_Disbursals__c.field-meta.xml
<CustomField>
    <fullName>loan__Suspend_Disbursals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suspend Disbursals</description>
    <label>Suspend Disbursals</label>
    <type>Checkbox</type>
</CustomField>